--- a/shared_styles.css
+++ b/shared_styles.css
@@ -52,7 +52,7 @@ span.cat {
 span.cat:hover {
   box-shadow: 0 5px 15px rgba(0,0,0,.3);
 }
-input {
+input, select {
   color: #334;
   border: 2px solid #334;
   box-shadow: 0px 5px rgba(0)
@@ -65,7 +65,7 @@ input {
   outline: none;
   font-family: 'Josefin Sans', sans-serif;
 }
-input:focus {
+input:focus, select:focus {
   box-shadow: 0 5px 15px rgba(0,0,0,.2);
 }
 input.otpt {
