--- a/shared_styles.css
+++ b/shared_styles.css
@@ -91,3 +91,13 @@ div.container:hover > span:hover {
 option {
 	padding: 4px 8px;
 }
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #334;
+    color: white;
+    text-align: center;
+}
