--- a/shared_styles.css
+++ b/shared_styles.css
@@ -97,7 +97,7 @@ option {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: #334;
-    color: white;
+    background-color: white;
+    color: #334;
     text-align: center;
 }
