Update and rename shared-styles.css to wait-page.css

--- a/wait-page.css
+++ b/wait-page.css
@@ -7,8 +7,11 @@ h1 {
   color: #222;
   margin-top: 40vh;
   font-size: 60px;
+  transform-style: preserve-3d;
+  transorm: perspective(1000px);
 }
 p {
   color: #222;
   font-size: 24px;
+  transform: translateZ(20px)
 }
