--- a/wait-page.css
+++ b/wait-page.css
@@ -1,7 +1,7 @@
 html {
   font-family: 'Crimson Text', serif;
 }
-.main {
+.body {
   background-image: url("blurred-4k-bg.png");
   background-size: 100%;
   width: 100vw;
