--- a/wait-page.css
+++ b/wait-page.css
@@ -1,7 +1,7 @@
 html {
   font-family: 'Crimson Text', serif;
 }
-.body {
+body {
   background-image: url("blurred-4k-bg.png");
   background-size: 100%;
 }
