--- a/main-styles.css
+++ b/main-styles.css
@@ -1,43 +1,49 @@
 html {
   font-family: 'Crimson Text', serif;
+  scroll-behavior: smooth;
 }
 body {
   background-image: url("images/blurred-4k-bg.png");
-  background-size: cover;
+  background-attachment: fixed;
   margin: 0;
   padding: 0;
+  overflow-y: scroll;
 }
+
 .h1-wait {
   margin-top: 40vh;
   font-size: 60px;
 }
+
 .image-demo {
-  margin-top: 5vh;
-  box-shadow: 0 0 30px #36393f;
-  transition: all 1s;
+  margin-top: 64vh;
+  box-shadow: inset 0px 0px 80px 80px #222, 0 0 30px rgba(54, 57, 63, .3);
 }
+
 .image-demo:hover {
-  box-shadow: 0 0 50px #36393f;
-  transform: scale(1.03);
+  box-shadow: inset 0px 0px 80px 80px #222, 0 0 50px rgba(54, 57, 63, .4);
 }
+
 h1 {
   line-height: .8vh;
   color: #222;
   font-size: 50px;
   color: #5f5151;
 }
+
 p {
   color: #5f5151;
   font-size: 24px;
   transform: translateZ(20px);
   width: 30vw;
-}
-psmaller {
-  font-size: 18px;
-  width: 15vw;
+  margin-top: 2vh;
+  margin-bottom: 35vh;
 }
 
-/* NAVBAR */
+psmaller {
+  font-size: 20px;
+  width: 15vw;
+}
 
 ul {
   list-style-type: none;
@@ -47,7 +53,7 @@ ul {
   background-color: #4f4141;
   opacity: .7;
   pointer-events: none;
-  transition: all 1s;
+  transition: all .2s;
 }
 
 ul:hover {
@@ -67,8 +73,8 @@ li a {
   padding: 14px 16px 16px 16px;
   text-decoration: none;
   font-family: 'Crimson Text', sans-serif;
-  font-size: 20px;
-  transition: all .5s;
+  font-size: 22px;
+  transition: all .3s;
 }
 
 li a:hover {
@@ -78,10 +84,60 @@ li a:hover {
 li a.active {
   background: #3f3131;
 }
+
 .image-logo {
   margin-top: 5vh;
 }
 
-a:active {
-  color: #5f5151;
+p a:active {
+  color: #efb697;
+}
+
+p a {
+  color: #f49866;
+  opacity: .7;
+  font-size: 24px;
+  transition: all .3s;
+}
+
+p a:hover {
+   opacity: 1;
+}
+
+.collapsed a {
+  color: white;
+  opacity: .8;
+  font-size: 24px;
+  transition: all .3s;
+}
+
+.collapsed a:hover {
+  opacity: 1;
+}
+
+.collapsed {
+  color: white;
+  background: #3f3131;
+  width: 25vw;
+  height: 4vh;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+  transition: all .8s;
+  opacity: .85;
+}
+.collapsed:hover {
+  width: 25vw;
+  height: 20vh;
+  transition: all .8s;
+}
+.collapsed h2 {
+  margin: 0;
+  font-weight: 500;
+  font-size: 2.6vh;
+}
+@keyframes unroll {
+  0%  {width: 6vw; height:4vh;}
+  35%  {width: 25vw; height:4vh;}
+  100%  {width: 25vw; height:20vh;}
 }
