--- a/rework-styles.css
+++ b/rework-styles.css
@@ -40,3 +40,9 @@ button:hover {
 .w3-modal-content {
 	box-shadow: 0 0 50px rgba(0,0,0,.2) !important;
 }
+iframe {
+	border: 4px solid #009688;
+}
+.w3-code {
+	border-left:4px solid #009688 !important;
+}
